[tool.poetry]
name = "replaceme"
version = "0.1.0"
description = ""
authors = ["gyuta <kuroshiba0408@gmail.com>"]
readme = "README.md"
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
ruff = "^0.4.3"
pyright = "^1.1.364"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
